@@ -1,5 +1,7 @@
 pgbconsole (current development) unstable; urgency=low
 
+  * Add ability to change min age interval for pg_stat_activity long queries.
+  * Add cmd_readline from pgbconsole.
   * Add pg_stat_activity long queries screen (based on db_activity).
   * Add relation sizes screen (awesome feature imho).
   * Add pg_statio_user_tables screen, join pg_statio_user_indexes to
